<resources>
    <string name="app_name">My Cart</string>
    <!-- strings.xml -->
    <string name="search">
        Search
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">MY CART</string>
    <string name="checkout">CheckOut</string>
    <string name="sum">Sum</string>
    <string name="quantity">Quantity</string>
    <string name="total">TOTAL</string>
    <string name="total_price">total_price</string>
    <string name="search_hint">Search...</string>
    <string name="check_out_icon_des">CheckOut</string>
    <string name="msg_token_fmt">default</string>
    <string name="description">Description\n</string>
    <string name="title">title</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_name">Product name</string>

</resources>